<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">


    <string name="app_name">My Photo Music Player</string><!-- change app name here -->

    <string name="share_app_msg">Hi! I\'m using a fabulous Video and Music player application. Just try it.</string>
    <string name="ask_rating_msg">We\'re glad you\'re enjoying out Video and Music player App,do you want to give us 5-Star? It really help us out! Thanks for your support:)</string>
    <string name="ask_rating_title">Rate Us 5 Stars!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="artist_image_description">Artist Image</string>

    <string name="menu_sort_by">Sort by</string>
    <string name="sort_order_entry_az">A-Z</string>
    <string name="sort_order_entry_za">Z-A</string>
    <string name="sort_order_entry_artist">Artist</string>
    <string name="sort_order_entry_album">Album</string>
    <string name="sort_order_entry_year">Year</string>
    <string name="sort_order_entry_duration">Duration</string>
    <string name="sort_order_entry_number_of_songs">Number of songs</string>
    <string name="sort_order_entry_number_of_albums">Number of albums</string>

    <string name="menu_show_as">View As</string>
    <string name="menu_show_as_entry_list">List</string>
    <string name="menu_show_as_entry_grid">Grid</string>

    <string name="count_song"><xliff:g id="count">%d</xliff:g> song</string>
    <string name="count_songs"><xliff:g id="count">%d</xliff:g> songs</string>
    <string name="count_album"><xliff:g id="count">%d</xliff:g> album</string>
    <string name="count_albums"><xliff:g id="count">%d</xliff:g> albums</string>

    <string name="combine_two_strings" translatable="false">%1$s | %2$s</string>

    <string name="album_not_found">Album Not Found</string>
    <string name="artist_not_found">Artist Not Found</string>
    <string name="recording_not_found">Call Recording Not Found</string>
    <string name="gener_not_found">Gener Not Found</string>
    <string name="ring_not_found">Ring Tone Not Found</string>
    <string name="song_not_found">Song Not Found</string>
    <string name="my_folder">My Folders</string>
    <string name="my_history">My History</string>
    <string name="my_playlist">My Playlist</string>
    <string name="settings">Settings</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="remove_from_playlist">Remove from Playlist</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="remove_from_queue">Remove from Queue</string>
    <string name="proparty">Property</string>
    <string name="ring_tone_cutter">Ringtone Cutter</string>
    <string name="share">Share</string>
    <string name="set_ring_tone">Set Ringtone</string>

    <!--Settings-->
    <string name="main_title">General</string>
    <string name="sub_title_one">Clear cache</string>
    <string name="sub_title_two">Check cache usage</string>
    <string name="sub_title_three">Clear history</string>
    <string name="sub_title_one_summary">Clear locally cached content</string>
    <string name="sub_title_two_summary">check for locally cached content size</string>
    <string name="sub_title_three_summary">clear all songs history</string>
    <string name="second_title">Advanced</string>
    <string name="third_title">Music Player</string>
    <string name="fourth_title">About App</string>
    <string name="change_theme">Change Theme</string>
    <string name="change_theme_msg">Change Background,animation,transparency and also add your photo</string>
    <string name="sub_title_three3">Show widget</string>
    <string name="sub_title_one11">Version</string>
    <string name="title_time">Set sleep time</string>
    <string name="title_snow">Background Animation Effect</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="relevant_ads">Change Relevant Ads Show</string>
    <string name="total_songs">Total songs : </string>


    <!--Equilizer-->
    <string name="preference_file_key">music_player_preference_settings</string>

    <!--  #####################################################################  -->

    <!--
     Main / media select activity
     -->

    <string name="main_activity_label">Ringdroid</string>

    <string name="search_edit_box">Search</string>

    <string name="button_start_record_activity">Record New</string>

    <string name="sdcard_readonly">Sorry, the SD Card is mounted as read-only and Ringdroid requires it to be writable.</string>
    <string name="no_sdcard">Sorry, Ringdroid can\'t run unless you have an SD Card inserted.</string>
    <string name="sdcard_shared">Sorry, Ringdroid can\'t run while your handset is mounted as a USB device.</string>

    <string name="button_options">Options</string>

    <!--
     Edit activity
     -->

    <!-- Labels next to the start and end time edit boxes -->
    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>

    <string name="edit_intent">Edit</string>

    <string name="time_seconds">seconds</string>

    <!-- After you save a notification or ringtone and have more options
         for what to do with them -->
    <string name="what_to_do_with_ringtone">Saved!  Make this your default ringtone ?</string>
    <string name="set_default_notification">Saved!  Make this your default notification?</string>

    <string name="make_default_ringtone_button">Set Ring Tone</string>
    <string name="choose_contact_ringtone_button">Assign to Contact</string>
    <string name="do_nothing_with_ringtone_button">Close</string>

    <!-- Progress dialog text for loading, recording, or saving... -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_recording">Recording…</string>
    <string name="progress_dialog_saving">Saving…</string>
    <string name="progress_dialog_cancel">Cancel</string>
    <string name="progress_dialog_stop">Stop</string>

    <!-- Image button descriptions for accessibility -->

    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ffwd">Fast forward</string>

    <!--
     Menu items
     -->

    <string name="menu_save">Save</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_about">About</string>
    <string name="menu_show_all_audio">Show All Audio</string>

    <!--
     Context menu items
     -->

    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_default_ringtone">Set as Default Ringtone</string>
    <string name="context_menu_contact">Assign to Contact</string>
    <string name="context_menu_default_notification">Set as Default Notification</string>

    <!--
     File Save dialog
     -->

    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_save">Save</string>
    <string name="file_save_button_cancel">Cancel</string>

    <string name="ringtone_type_label">Type:</string>

    <string name="type_music">Music</string>
    <string name="type_alarm">Alarm</string>
    <string name="type_notification">Notification</string>
    <string name="type_ringtone">Ringtone</string>

    <string name="ringtone_name_label">Name:</string>

    <string name="artist_name">Ringdroid</string>

    <!--
     Delete confirmation dialog
     -->

    <string name="delete_ringtone">Delete Ringtone</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="delete_music">Delete Music</string>
    <string name="delete_audio">Delete Audio</string>

    <string name="confirm_delete_ringdroid">Are you sure?</string>
    <string name="confirm_delete_non_ringdroid"
        >Are you sure?  This file was not created using Ringdroid!</string>

    <string name="delete_ok_button">Delete</string>
    <string name="delete_cancel_button">Cancel</string>

    <string name="delete_failed">Unable to delete file</string>

    <!--
     Success and error messages
     -->

    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="alert_no_button">No, thanks.</string>

    <string name="save_success_message">Saved!</string>
    <string name="default_ringtone_success_message">Changed default ringtone</string>
    <string name="default_notification_success_message">Changed default notification sound</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="record_error">Error recording audio</string>
    <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>
    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>

    <string name="bad_extension_error">Sorry, Ringdroid is not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, Ringdroid can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>

    <!--
     Choose Contact Activity
     -->

    <string name="choose_contact_title">Assign ringtone to which contact?</string>
    <string name="success_contact_ringtone">Successfully assigned ringtone to:</string>

    <string name="about_title">About Ringdroid</string>
    <string name="about_text"><![CDATA[Use Ringdroid to edit MP3, OGG, WAV, AAC, and AMR audio files and create ringtones, alarms, and notifications from them.\n\nTip: copy audio files to your SD card using a USB cable.\n\nTip: tap anywhere on the waveform to start playing at that position.\n\nTip: while playing, tap the word Start or End to quickly set the start and end markers to the current playback time.\n\nVersion %s\n\nDeveloper: Dominic Mazzoni, Nicolas Faralli\nGraphics: Joseph Wain\nSupport and evangelizing: Eugene Koh\nEnhancements: Dan Klufas\n\nRingdroid is free software, distributed under the Apache 2.0 license.  Source code is on github.com/google/ringdroid\n]]></string>
    <string name="default_notification_channel_id" translatable="false">10002020</string>
    <string name="transparancy">Transparancy</string>
    <string name="blur">Blur</string>
    <string name="todo">TODO</string>


    <string name="video">Video</string>
    <string name="music">Music</string>
    <string name="status">Status</string>
    <string name="setting">Setting</string>
    <string name="video_types">mp4</string>
    <string name="msg_deleted">File Deleted</string>
    <string name="msg_deleted_error">File Can not Delete !</string>
</resources>
