<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always"
        android:title="Search"/>

    <item
        android:orderInCategory="40"
        android:title="@string/menu_show_as"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_show_as_list"
                android:title="@string/menu_show_as_entry_list"/>
            <item
                android:id="@+id/menu_show_as_grid"
                android:title="@string/menu_show_as_entry_grid"/>
        </menu>
    </item>

    <item
        android:orderInCategory="50"
        android:title="@string/menu_sort_by"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_sort_by_az"
                android:title="@string/sort_order_entry_az"/>
            <item
                android:id="@+id/menu_sort_by_za"
                android:title="@string/sort_order_entry_za"/>
            <item
                android:id="@+id/menu_sort_by_year"
                android:title="@string/sort_order_entry_year"/>
            <item
                android:id="@+id/menu_sort_by_artist"
                android:title="@string/sort_order_entry_artist"/>
            <item
                android:id="@+id/menu_sort_by_number_of_songs"
                android:title="@string/sort_order_entry_number_of_songs"/>
        </menu>
    </item>

</menu>