<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adview_banner"
        android:adjustViewBounds="true"
        android:foreground="@color/forground_theme"
        android:scaleType="centerCrop"
        android:src="@drawable/gradient1" />

    <ImageView
        android:id="@+id/img_main_background_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adview_banner"
        android:adjustViewBounds="true"
        android:foreground="@color/forground_theme"
        android:scaleType="centerCrop" />

    <include
        layout="@layout/include_flake_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adview_banner"/>

    <LinearLayout
        android:id="@+id/rel_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/queue_list_background"
        android:orientation="vertical">

        <com.gauravk.bubblenavigation.BubbleNavigationLinearView
            android:id="@+id/bottom_navigation_view_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:visibility="visible">

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:bt_active="true"
                app:bt_badgeBackgroundColor="@color/white"
                app:bt_badgeTextSize="@dimen/_8sdp"
                app:bt_colorActive="@color/white"
                app:bt_colorInactive="@color/white"
                app:bt_icon="@drawable/ic_music"
                app:bt_padding="5dp"
                app:bt_shape="@drawable/transition_background_drawable_home"
                app:bt_shapeColor="@color/white"
                app:bt_title="@string/music" />

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="0dp"
                app:bt_badgeTextSize="@dimen/_8sdp"
                app:bt_colorActive="@color/white"
                app:bt_colorInactive="@color/white"
                app:bt_icon="@drawable/ic_video"
                app:bt_padding="5dp"
                app:bt_shape="@drawable/transition_background_drawable_home"
                app:bt_title="@string/video" />


            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:bt_badgeBackgroundColor="@color/white"
                app:bt_badgeTextSize="@dimen/_8sdp"
                app:bt_colorActive="@color/white"
                app:bt_colorInactive="@color/white"
                app:bt_icon="@drawable/ic_setting"
                app:bt_padding="5dp"
                app:bt_shape="@drawable/transition_background_drawable_home"
                app:bt_title="@string/setting" />


        </com.gauravk.bubblenavigation.BubbleNavigationLinearView>

        <RelativeLayout
            android:id="@+id/adview_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="visible"></RelativeLayout>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rel_bottom"></FrameLayout>


</RelativeLayout>