<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/transparent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/background"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:elevation="0dp"
        app:layout_scrollFlags="scroll|enterAlways"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="bottom">

        <RelativeLayout
            android:id="@+id/rel_snowfall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <RelativeLayout
                android:id="@+id/rel_check"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:background="@color/transparent_bg_white">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_snow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:checked="false"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center"
                android:layout_marginEnd="5dp"
                app:buttonTint="@color/colorAccent"
                android:textColorLink="@null" />

            </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_flake"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toEndOf="@+id/rel_check"
            android:background="@color/transparent_bg_white"/>

            <TextView
                android:id="@+id/txt_snow_fall_effect"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toEndOf="@+id/rel_check"
                android:background="@color/transparent_bg_white"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:visibility="gone"
                android:textStyle="bold"
                android:text="Background Animation Effect"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_menu_gallery"
            android:layout_marginEnd="5dp"
            android:padding="@dimen/_8sdp"
            app:tint="@color/white"
            android:background="#33FFFFFF"
            android:adjustViewBounds="true"
            android:id="@+id/img_gallary"
            android:contentDescription="@string/todo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_background"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_toEndOf="@+id/img_gallary"
        android:background="@color/transparent_bg_white"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_seekbar"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@color/transparent_bg_white"
            android:visibility="visible"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/txt_transparent"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:padding="5dp"
                android:textColor="@color/white"
                android:text="@string/transparancy"/>

            <SeekBar
                android:id="@+id/seek_transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_toEndOf="@+id/txt_transparent"/>

            <TextView
                android:id="@+id/txt_blur"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_transparent"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:padding="5dp"
                android:text="@string/blur"/>

            <SeekBar
                android:id="@+id/seek_blur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_transparent"
                android:padding="5dp"
                android:layout_toEndOf="@+id/txt_blur"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>

